Stuck buttons fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -473,7 +473,7 @@ div.footerButtons {
     left: -2vw;
   }
   #buttons.stuck .buttons button.author:nth-of-type(2) {
-    width: 39.5vw;
+    width: 34vw;
     left: 33.5vw;
   }
   #buttons.stuck .buttons button.author:nth-of-type(3) {
